<resources>
    <string name="app_name">M4.2 PRD</string>

    <string name="system_action_cancel">Cancel</string>
    <string name="system_action_done">Done</string>
    <string name="system_empty_field">--</string>
    <string name="system_error_required_field">\'%1$s\' is required.</string>
    <string name="system_error_not_allowed_field">\'%1$s\' is not allowed for this value.</string>
    <string name="system_message_saved">%1$s saved!</string>
    <string name="system_message_deleted">%1$s deleted!</string>

    <string name="action_filter">Filter</string>

    <string name="title_activity_transaction_manager">Transaction Manager</string>
    <string name="transaction_payment_type">Payment Type</string>
    <string name="transaction_price">Price</string>
    <string name="transaction_refund">Refund</string>
    <string name="transaction_payment_date">Payment Date</string>
    <string name="transaction_purchase_date">Purchase Date</string>
    <string name="transaction_content">Content</string>
    <string name="transaction_tag">Tag</string>
    <string name="transaction_filter_title">Transaction Filter</string>
    <string name="transaction_manager_title">Transaction Manager</string>
    <string name="transaction_payment_date_start">Payment Date Start</string>
    <string name="transaction_payment_date_end">Payment Date End</string>
    <string name="transaction_parcels">Parcels</string>
    <string name="transaction_already_paid">Already Paid</string>
    <string name="transaction">Transaction</string>
    <string name="system_action_delete">Delete</string>
    <string name="system_action_ok">OK</string>
    <string name="system_message_request_delete">Are you sure you want to delete?</string>
    <string name="system_action_copy">Copy</string>
    <string name="home_future_transactions">Future Transactions</string>
    <string name="home_current_transactions">Transactions</string>
    <string name="system_action_pin">Pin</string>
    <string name="system_action_unpin">Unpin</string>
    <string name="transaction_month">Month</string>
    <string name="transaction_year">Year</string>

    <array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </array>

    <array name="filter_years">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </array>

    <string name="paymenttype_debito_key">-KkgOxzck3cnJjQqum-S</string>
    <string name="paymenttype_nubank_key">-KkgW0A6MzTKBld82VwV</string>
    <string name="tag_debito_key">-KmOeEFCprnjvwY3yS_Y</string>

    <string name="system_action_add_new">Add New</string>
    <string name="system_action_edit">Edit</string>
    <string name="system_actions_more_actions">More actions</string>
    <string name="tag_manager_parent">Parent</string>
    <string name="title_activity_credit_card">CreditCardActivity</string>
    <string name="action_settings">Settings</string>

</resources>
