<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.system.m4.views.home.HomeActivity">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:orderInCategory="50"
        android:title="@string/system_action_copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="75"
        android:title="@string/system_action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="always" />

</menu>
