<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:id="@+id/transaction_manager_action_tags"
        style="@style/AppTheme.Form.Section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transaction_manager_textview_tags"
            style="@style/AppTheme.Form.TextView.Secundary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/system_empty_field"
            android:textSize="28dp"
            tools:text="Aluguel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/transaction_manager_action_payment_type"
                style="@style/AppTheme.Form.Section.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_payment_type" />

                <TextView
                    android:id="@+id/transaction_manager_textview_payment_type"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="Nubank" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transaction_manager_action_value"
                style="@style/AppTheme.Form.Section.End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_price" />

                <TextView
                    android:id="@+id/transaction_manager_textview_value"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="R$ 500,00" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/transaction_manager_action_payment_date"
                style="@style/AppTheme.Form.Section.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_payment_date" />

                <TextView
                    android:id="@+id/transaction_manager_textview_payment_date"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="25 de março de 2017" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transaction_manager_action_purchase_date"
                style="@style/AppTheme.Form.Section.End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_purchase_date" />

                <TextView
                    android:id="@+id/transaction_manager_textview_purchase_date"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="1 de março de 2017" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/transaction_manager_action_content"
            style="@style/AppTheme.Form.Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.Form.TextView.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transaction_content" />

            <TextView
                android:id="@+id/transaction_manager_textview_content"
                style="@style/AppTheme.Form.TextView.Secundary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_empty_field"
                tools:text="Parcela 1 de 20." />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/base_tab_buttom_dialog" />

</LinearLayout>