<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar_dialog" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/transaction_manager_action_tag"
                style="@style/AppTheme.Form.Section.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_tag" />

                <TextView
                    android:id="@+id/transaction_manager_textview_tag"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="Aluguel" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transaction_manager_action_payment_type"
                style="@style/AppTheme.Form.Section.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_payment_type" />

                <TextView
                    android:id="@+id/transaction_manager_textview_payment_type"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="Nubank" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/transaction_manager_action_purchase_date"
                style="@style/AppTheme.Form.Section.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_purchase_date" />

                <TextView
                    android:id="@+id/transaction_manager_textview_purchase_date_start"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="25 de março de 2017" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transaction_manager_action_purchase_date_end"
                style="@style/AppTheme.Form.Section.End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/transaction_manager_textview_purchase_date_end"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="1 de março de 2017" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/transaction_manager_action_payment_date_start"
                style="@style/AppTheme.Form.Section.Start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_payment_date" />

                <TextView
                    android:id="@+id/transaction_manager_textview_payment_date_start"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="25 de março de 2017" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/transaction_manager_action_payment_date_end"
                style="@style/AppTheme.Form.Section.End"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/AppTheme.Form.TextView.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/transaction_manager_textview_payment_date_end"
                    style="@style/AppTheme.Form.TextView.Secundary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_empty_field"
                    tools:text="1 de março de 2017" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/base_tab_buttom_dialog" />

</LinearLayout>